# json-rpc-client

./: .gitignore  cabal.project.ci  json-rpc-client.cabal
.github/workflows/: ci.yml
src/Network/JsonRpc/: Client.hs
src/Network/JsonRpc/Client/: Internal.hs
test/Test/Network/JsonRpc/: ClientSpec.hs
