cabal-version:   3.0
name:            json-rpc-client
version:         0.1.0.0
synopsis:        JSON-RPC 2.0 client with request tracking and batch support
description:
  A JSON-RPC 2.0 client that generates request ids, tracks pending
  requests, correlates responses, and supports batch operations.
  Transport-agnostic: bring your own transport implementation.

license:         BSD-3-Clause
author:          Your Name
maintainer:      you@example.com
category:        Network
build-type:      Simple

library
  default-language: GHC2021
  hs-source-dirs:   src
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints

  exposed-modules:
    Network.JsonRpc.Client
    Network.JsonRpc.Client.Internal

  build-depends:
      base                  >= 4.16  && < 4.22
    , json-rpc-core
    , aeson                 >= 2.0   && < 2.3
    , hashable              >= 1.3   && < 1.6
    , scientific            >= 0.3   && < 0.4
    , text                  >= 2.0   && < 2.2
    , time                  >= 1.9   && < 1.15
    , unordered-containers  >= 0.2.16 && < 0.3

test-suite json-rpc-client-test
  type:             exitcode-stdio-1.0
  default-language: GHC2021
  hs-source-dirs:   test
  main-is:          Spec.hs
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

  other-modules:
    Test.Network.JsonRpc.ClientSpec

  build-depends:
      base
    , json-rpc-core
    , json-rpc-client
    , aeson
    , hspec                >= 2.9   && < 2.12
    , QuickCheck           >= 2.14  && < 2.16
    , text
    , time

  build-tool-depends:
    hspec-discover:hspec-discover
